--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,12 +158,11 @@ jobs:
       # 7. Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
-          gcloud run services replace service.yaml --region ${{ env.REGION }}
-          
-     # 8. Set SERVICE SCALING (Global)
-      # This explicitly sets the "Service scaling" section in the GCP UI to 1.
-      - name: Update Service Scaling
-        run: |
           gcloud run services update ${{ env.SERVICE_NAME }} \
-            --min-instances 1 \
-            --region ${{ env.REGION }}     
+            --region ${{ env.REGION }} \
+            --container fastapi \
+            --image ${{ env.FASTAPI_IMAGE }} \
+            --container nginx \
+            --image ${{ env.NGINX_IMAGE }}
+          
+   
