Refactor Cloud Run deployment workflow
Removed the creation of Cloud Run Service YAML and updated deployment steps.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,65 +104,18 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-      # 6. Generate Cloud Run Service YAML (Fixed for Sidecar Ordering & Latency)
-      - name: Create Cloud Run Service YAML
-        run: |
-          cat > service.yaml <<EOF
-          apiVersion: serving.knative.dev/v1
-          kind: Service
-          metadata:
-            name: ${{ env.SERVICE_NAME }}
-            annotations:
-              run.googleapis.com/launch-stage: BETA
-          spec:
-            template:
-              metadata:
-                annotations:
-                  run.googleapis.com/execution-environment: gen2
-                  # SCALING: Keeps 1 instance alive to eliminate Cold Start Latency
-                  autoscaling.knative.dev/minScale: "1"
-                  # BOOST: Uses extra CPU during boot to load Python faster
-                  run.googleapis.com/startup-cpu-boost: "true"
-              spec:
-                containers:
-                  # Container 1: FastAPI (Sidecar - Backend)-
-                  - image: ${{ env.FASTAPI_IMAGE }}
-                    name: fastapi
-                    env:
-                      - name: PORT
-                        value: "8000"
-                    resources:
-                      limits:
-                        memory: 512Mi
-                        cpu: 1000m
-                    # CRITICAL: Tells Cloud Run "I am ready when Port 8000 is open"
-                    startupProbe:
-                      tcpSocket:
-                        port: 8000
-                      initialDelaySeconds: 5
-                      periodSeconds: 2
-                      failureThreshold: 10
 
-                  # Container 1: Nginx (Ingress - Receives Traffic)-
-                  - image: ${{ env.NGINX_IMAGE }}
-                    name: nginx
-                    ports:
-                      - containerPort: 80
-                    resources:
-                      limits:
-                        memory: 512Mi
-                        cpu: 1000m
-                    
-          EOF
 
-      # 7. Deploy to Cloud Run
+      # 6. Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           gcloud run services update ${{ env.SERVICE_NAME }} \
             --region ${{ env.REGION }} \
+            --container nginx \
+            --image ${{ env.NGINX_IMAGE }} \
+            --port 80 \
             --container fastapi \
             --image ${{ env.FASTAPI_IMAGE }} \
-            --container nginx \
-            --image ${{ env.NGINX_IMAGE }}
+            --set-env-vars PORT=8000
           
    
